; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_testmgr.c_alg_test_pcomp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_testmgr.c_alg_test_pcomp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alg_test_desc = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__, %struct.TYPE_8__ }
%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_8__ = type { i32, i32 }
%struct.crypto_pcomp = type { i32 }

@.str = private unnamed_addr constant [50 x i8] c"alg: pcomp: Failed to load transform for %s: %ld\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.alg_test_desc*, i8*, i32, i32)* @alg_test_pcomp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alg_test_pcomp(%struct.alg_test_desc* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.alg_test_desc*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.crypto_pcomp*, align 8
  %11 = alloca i32, align 4
  store %struct.alg_test_desc* %0, %struct.alg_test_desc** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call %struct.crypto_pcomp* @crypto_alloc_pcomp(i8* %12, i32 %13, i32 %14)
  store %struct.crypto_pcomp* %15, %struct.crypto_pcomp** %10, align 8
  %16 = load %struct.crypto_pcomp*, %struct.crypto_pcomp** %10, align 8
  %17 = call i64 @IS_ERR(%struct.crypto_pcomp* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %4
  %20 = load i8*, i8** %7, align 8
  %21 = load %struct.crypto_pcomp*, %struct.crypto_pcomp** %10, align 8
  %22 = call i32 @PTR_ERR(%struct.crypto_pcomp* %21)
  %23 = call i32 @pr_err(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i8* %20, i32 %22)
  %24 = load %struct.crypto_pcomp*, %struct.crypto_pcomp** %10, align 8
  %25 = call i32 @PTR_ERR(%struct.crypto_pcomp* %24)
  store i32 %25, i32* %5, align 4
  br label %56

26:                                               ; preds = %4
  %27 = load %struct.crypto_pcomp*, %struct.crypto_pcomp** %10, align 8
  %28 = load %struct.alg_test_desc*, %struct.alg_test_desc** %6, align 8
  %29 = getelementptr inbounds %struct.alg_test_desc, %struct.alg_test_desc* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.alg_test_desc*, %struct.alg_test_desc** %6, align 8
  %35 = getelementptr inbounds %struct.alg_test_desc, %struct.alg_test_desc* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.alg_test_desc*, %struct.alg_test_desc** %6, align 8
  %41 = getelementptr inbounds %struct.alg_test_desc, %struct.alg_test_desc* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.alg_test_desc*, %struct.alg_test_desc** %6, align 8
  %47 = getelementptr inbounds %struct.alg_test_desc, %struct.alg_test_desc* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @test_pcomp(%struct.crypto_pcomp* %27, i32 %33, i32 %39, i32 %45, i32 %51)
  store i32 %52, i32* %11, align 4
  %53 = load %struct.crypto_pcomp*, %struct.crypto_pcomp** %10, align 8
  %54 = call i32 @crypto_free_pcomp(%struct.crypto_pcomp* %53)
  %55 = load i32, i32* %11, align 4
  store i32 %55, i32* %5, align 4
  br label %56

56:                                               ; preds = %26, %19
  %57 = load i32, i32* %5, align 4
  ret i32 %57
}

declare dso_local %struct.crypto_pcomp* @crypto_alloc_pcomp(i8*, i32, i32) #1

declare dso_local i64 @IS_ERR(%struct.crypto_pcomp*) #1

declare dso_local i32 @pr_err(i8*, i8*, i32) #1

declare dso_local i32 @PTR_ERR(%struct.crypto_pcomp*) #1

declare dso_local i32 @test_pcomp(%struct.crypto_pcomp*, i32, i32, i32, i32) #1

declare dso_local i32 @crypto_free_pcomp(%struct.crypto_pcomp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
